--- a/amazeChp5/css/style.css
+++ b/amazeChp5/css/style.css
@@ -29,6 +29,19 @@ h1 {
   width: 570px;
 }
 
+h3 {
+    font-family: 'Ubuntu', sans-serif;
+    border-radius: 5px;
+    color: #999;;
+    background: #ddd;
+    padding: 5px;
+    margin: 20px 0 10px 0;
+}
+
+h3:first-child {
+    margin-top: 0;
+}
+
 /* FOOTER HEADINGS */
 h5 {
     font-family: 'Ubuntu', sans-serif;
